fsharp/grammar.js
    file: ($) =>
      choice(
        repeat1($.namespace),
        prec(-1, repeat(choice($._module_elem, $._elem_separator))),
        prec(1, $.named_module),
      ),

    // The optional leading _elem_separator matters when the file opens with
    // an extra (e.g. a doc comment) before the header keyword: the scanner
    // fires the separator after the extra's newline, and if only the plain
    // module-elements arm of `file` could shift it, doing so would commit
    // the parse away from namespace/named_module before the keyword is even
    // seen (`module M` then mis-parses as a module_defn missing its `=`).
    _module_elem: ($) =>
      choice(
        alias($.value_declaration, $.declaration_expression),
        $.module_defn,
        $.module_abbrev,
        $.import_decl,
        $.fsi_directive_decl,
        $.type_definition,
        $.exception_definition,
        $.extern_binding,
        $._expression,
        $.preproc_if,
        alias($._attribute_expression, $.declaration_expression),
        // $.exception_defn
      ),

    do: ($) => prec(PREC.DO_EXPR + 1, seq("do", $._expression_block)),

    _function_or_value_defns: ($) =>
      prec.right(
        seq(
          $._function_or_value_defn_body,
          repeat(seq("and", $._function_or_value_defn_body)),
        ),
      ),

    function_or_value_defn: ($) =>
      seq(
        choice("let", "let!"),
        choice(
          $._function_or_value_defn_body,
          seq("rec", $._function_or_value_defns),
        ),
      ),

    _function_or_value_defn_body: ($) =>
      seq(
        choice($.function_declaration_left, $.value_declaration_left),
        // The return type may carry attributes: `let f(x) : [<A>] int = ...`.
        optional(seq(":", optional($.attributes), $._type)),
        optional($.type_argument_constraints),
        "=",
        field("body", $._expression_block_for_let),
      ),

    value_declaration_left: ($) =>
      prec.left(
        2,
        choice(
          seq(
            optional("mutable"),
            optional($.access_modifier),
            $._pattern,
            optional($.type_arguments),
          ),
          // `let inline add3 = add 3` — an inline value has no parameters, so it
          // is not a function_declaration_left. Only a plain name may follow the
          // keyword, so `let inline f x` stays a function.
          seq("inline", optional($.access_modifier), alias($._inline_value_name, $.identifier_pattern), optional($.type_arguments)),
        ),
      ),

    // The name of an inline value: a bare identifier_pattern with no arguments.
    _inline_value_name: ($) => $.long_identifier_or_op,

    _pattern: ($) =>
      choice(
        "null",
        alias("_", $.wildcard_pattern),
        $.typed_const_pattern,
        $.const,
        $.as_pattern,
        $.disjunct_pattern,
        $.conjunct_pattern,
        $.cons_pattern,
        $.repeat_pattern,
        $.paren_pattern,
        $.list_pattern,
        $.array_pattern,
        $.record_pattern,
        $.typed_pattern,
        $.attribute_pattern,
        $.type_check_pattern,
        $.optional_pattern,
        $.identifier_pattern,
        $.named_field_pattern,
      ),

    identifier_pattern: ($) =>
      prec.left(
        1,
        seq(
          $.long_identifier_or_op,
          optional($._pattern),
          optional($._pattern),
        ),
      ),

    //
    // Pattern rules (END)
    //

    //
    // Expressions (BEGIN)
    //

    _expression_block: ($) => seq($._indent, $._expression, $._dedent),

    // Like _expression_block, but also allows the block to be terminated by
    // the 'in' keyword instead of a dedent.  Used for let/use bindings so that
    // single-line  let x = 1 in x  works (where no newline → no DEDENT).
    _expression_block_for_let: ($) =>
      seq($._indent, $._expression, choice($._dedent, $._in)),

    _expression: ($) =>
      choice(
        "null",
        $.const,
        $.paren_expression,
        $.begin_end_expression,
        $.long_identifier_or_op,
        $.typed_expression,
        $.infix_expression,
        $.index_expression,
        $.mutate_expression,
        $.list_expression,
        $.array_expression,
        $.ce_expression,
        $.prefixed_expression,
        $.generic_new_expression,
        $.brace_expression,
        $.anon_record_expression,
        $.typecast_expression,
        $.declaration_expression,
        $.do_expression,
        $.fun_expression,
        $.function_expression,
        $.sequential_expression,
        $.if_expression,
        $.while_expression,
        $.for_expression,
        // Short-form comprehension `for x in xs -> e` so nested comprehensions
        // like `[ for l in 0..3 do for h in 0..3 -> (l, h) ]` parse — the
        // do-form body is a plain expression block.
        $.short_comp_expression,
        $.match_expression,
        $.try_expression,
        $.literal_expression,
        $.tuple_expression,
        $.application_expression,
        $.dot_expression,
        alias($.preproc_if_in_expression, $.preproc_if),
        $.srtp_call_expression,
      ),

    long_identifier_or_op: ($) =>
      prec.right(
        choice(
          $.long_identifier,
          seq($.long_identifier, ".", $._identifier_or_op),
          $._identifier_or_op,
        ),
      ),

    typed_expression: ($) =>
      prec(
        PREC.PAREN_EXPR,
        seq(
          $._expression,
          $._tyapp_open,
          optional(choice($.types, $.measure)),
          prec(PREC.PAREN_EXPR, ">"),
        ),
      ),

    declaration_expression: ($) =>
      seq(
        choice(
          seq(choice("use", "use!"), optional("mutable"), choice($.identifier, $.paren_pattern), optional(seq(":", $._type)), "=", $._expression_block_for_let),
          seq(
            $.function_or_value_defn,
            repeat($.and_bang),
          ),
        ),
        field("in", $._expression),
      ),

    _high_prec_app: ($) =>
      prec.left(
        PREC.DOT + 1,
        seq(
          $._expression,
          choice(
            $.unit,
            seq(token.immediate(prec(10000, "(")), $._paren_expression_block, ")"),
          ),
        ),
      ),

    _low_prec_app: ($) =>
      prec.left(PREC.APP_EXPR, seq($._expression, $._expression)),

    application_expression: ($) => choice($._high_prec_app, $._low_prec_app),

    infix_expression: ($) =>
      choice(
        prec.left(
          PREC.INFIX_OR,
          seq($._expression, alias(choice("||", "or"), $.infix_op), $._expression),
        ),
        prec.left(
          PREC.INFIX_AND,
          seq($._expression, alias("&&", $.infix_op), $._expression),
        ),
        prec.left(
          PREC.SPECIAL_INFIX,
          seq($._expression, $.infix_op, $._expression),
        ),
      ),

    sequential_expression: ($) =>
      prec.right(
        PREC.SEQ_EXPR,
        seq(
          $._expression,
          repeat1(
            prec.right(
              PREC.SEQ_EXPR,
              seq(alias($._newline, ";"), $._expression),
            ),
          ),
        ),
      ),

    //
    // Expressions (END)
    //

    //
    // Computation expression (BEGIN)
    //

    _type: ($) =>
      prec(
        4,
        choice(
          $.simple_type,
          $.generic_type,
          $.paren_type,
          $.function_type,
          $.compound_type,
          $.postfix_type,
          $.list_type,
          $.byref_type,
          $.static_type,
          $.type_argument,
          $.constrained_type,
          $.flexible_type,
          $.anon_record_type,
          $.struct_type,
        ),
      ),

    // Like _type but excludes compound_type and function_type, used in member
    // signature argument positions. Per F# spec, T * T before -> is always two
    // separate positional arguments (not a tuple-typed arg); tuple/function-typed
    // arguments must be parenthesized: (T * T) or (T -> T).
    measure_atom: ($) =>
      choice(
        $.simple_type,
        $.type_argument,
        seq("(", $.measure, ")"),
        "_",
        "1",
      ),

    measure_power: ($) =>
      prec.right(
        7,
        seq(
          $.measure_atom,
          choice(
            seq("^", $._measure_exponent),
            // `s^-1`: the lexer takes `^-` as a single symbolic-operator
            // token, so a negative exponent cannot be spelled `^` `-` int.
            seq("^-", $.int),
          ),
        ),
      ),

    // The exponent may also be a parenthesized rational (`kg^(1/2)`,
    // `s^(-1/2)`) — F# spec 9.4 "Measure expressions".
    _measure_exponent: ($) =>
      choice($.int, seq("(", optional("-"), $.int, "/", $.int, ")")),

    _measure_operand: ($) =>
      choice(
        $.measure_power,
        $.measure_atom,
        $.compound_type,
      ),

    // Product by juxtaposition: `kg m`, `m s^-1`, `'u 'v`. F# also spells the
    // product `kg * m`, which arrives here as a compound_type operand. Binds
    // tighter than '/' so `kg m / s^2` is `(kg m) / s^2`.
    measure_quotient: ($) =>
      prec.left(
        5,
        seq(
          choice(
            $._measure_operand,
            $.measure_product,
            // `kg m` is indistinguishable from a postfix type until a
            // measure-only token appears, and the postfix reading wins the
            // (statically resolved) reduce/reduce — so accept it here, which
            // is what lets `kg m / s^2` parse. Only on the left of '/': as a
            // general operand it would also make a plain `type T = A.B`
            // abbreviation ambiguous with a measure.
            $.postfix_type,
          ),
          // `m / s s`: the same postfix-type reading of `s s` applies on the right.
          repeat1(seq("/", choice($._measure_operand, $.measure_product, $.postfix_type))),
        ),
      ),

    measure: ($) =>
      choice(
        $.measure_quotient,
        $.measure_power,
        $.measure_product,
        seq("(", $.measure, ")"),
        // The dimensionless measure `1`, e.g. `float<1>`. Reuses the same "1"
        // literal as measure_atom (no new token) so quotient/power measures like
        // `1/s` are unaffected; only a bare `1` reduces to this standalone form.
        alias("1", $.measure_atom),
      ),

    simple_type: ($) => choice($.long_identifier, $._static_type_identifier),
    types: ($) =>
      seq($._type, repeat(prec.left(PREC.COMMA - 1, seq(",", $._type)))),

    _static_type_identifier: ($) =>
      prec(10, seq(choice("^", token(prec(100, "'"))), $.identifier)),

    _string_char: ($) =>
      choice(
        $._simple_string_char,
        $._escape_char,
        $._trigraph,
        $._unicodegraph_short,
        $._hexgraph_short,
        $._non_escape_char,
        $._unicodegraph_long,
      ),

    char: (_) =>
      prec(
        -1,
        /'([^\n\t\r\u0008\a\f\v\\]|\\["\'ntbrafv]|\\[0-9]{3}|\\u[0-9a-fA-F]{4}|\\U[0-9a-fA-F]{8}|\\x[0-9a-fA-F]{2}|(\\\\))?'B?/,
      ),

    format_string_eval: ($) =>
      choice(
        seq(token.immediate(prec(1000, "{")), $._expression, "}"),
        seq($._multi_dollar_interp_start, $._expression, $._multi_dollar_interp_end),
      ),

    format_string: ($) =>
      choice(
        seq(
          token(prec(100, '$"')),
          repeat(
            choice(
              $.format_string_eval,
              // '{{' / '}}' are literal-brace escapes; must outrank the
              // interpolation-hole '{' (prec 1000).
              token.immediate(prec(1001, /\{\{|\}\}/)),
              $._string_char,
            ),
          ),
          '"',
        ),
        // Verbatim interpolated: $@"..." / @$"..." — backslashes are literal,
        // '""' is an escaped quote, {expr} holes still apply.
        seq(
          token(prec(100, choice('$@"', '@$"'))),
          repeat(
            choice(
              $.format_string_eval,
              token.immediate(prec(1001, /\{\{|\}\}/)),
              $._verbatim_string_char,
            ),
          ),
          token.immediate('"'),
        ),
      ),

    _string_literal: ($) => seq('"', repeat($._string_char), '"'),

    string: ($) => choice($._string_literal, $.format_string),

    _verbatim_string_char: ($) =>
      choice($._simple_string_char, $._non_escape_char, "\\", /\"\"/),
    verbatim_string: ($) =>
      seq('@"', repeat($._verbatim_string_char), token.immediate('"')),
    format_triple_quoted_string: ($) =>
      choice(
        seq(
          token(prec(100, '$"""')),
          optional($._format_triple_quoted_content),
          repeat(seq($.format_string_eval, optional($._format_triple_quoted_content))),
          '"""',
        ),
        seq(
          $._multi_dollar_triple_quote_start,
          optional($._multi_dollar_triple_quoted_content),
          repeat(seq($.format_string_eval, optional($._multi_dollar_triple_quoted_content))),
          $._multi_dollar_triple_quote_end,
        ),
      ),

    triple_quoted_string: ($) =>
      choice(
        seq('"""', $._triple_quoted_content, '"""'),
        $.format_triple_quoted_string,
      ),

    const: ($) =>
      choice(
        $.sbyte,
        $.int16,
        $.int32,
        $.int64,
        $.byte,
        $.uint16,
        $.uint32,
        $.int,
        $.xint,
        $.nativeint,
        $.unativeint,
        $.decimal,
        $.float,
        $.uint64,
        $.ieee32,
        $.ieee64,
        $.bignum,
        $.char,
        $.string,
        $.verbatim_string,
        $.triple_quoted_string,
        $.bytearray,
        $.verbatim_bytearray,
        $.bool,
        $.unit,
      ),

    // Identifiers:
    identifier: (_) =>
      token(
        choice(
          /[_\p{XID_Start}][_'\p{XID_Continue}]*/,
          // Double-backtick identifier: any run of non-newline chars delimited
          // by ``. Single backticks may appear inside (e.g. ``a `b` c``); the
          // delimiter is the next `` pair, so a backtick is only consumed when
          // followed by a non-backtick.
          /``([^`\n\r\t]|`[^`\n\r\t])+``/,
        ),
      ),

    long_identifier: ($) =>
      prec.right(seq($.identifier, repeat(seq(".", $.identifier)))),

    _identifier_or_op: ($) =>
      choice($.identifier, $.op_identifier, $.active_pattern),

    _infix_or_prefix_op: (_) => choice("+", "-", "+.", "-.", "%", "&"),

    infix_op: ($) =>
      prec(
        PREC.INFIX_OP,
        choice(
          $._infix_or_prefix_op,
          token.immediate(prec(1, /[+-]/)),
          /[-+=<>|&^*'%@?][!%&*+./<=>@^|~?-]*/,
          /\/[!%&*+.<=>@^|~?-]*/,
          // Dotted custom operators such as .*. .-. ./. — F# allows '.' to begin
          // an operator. A lone '.' is member access and '..' is a range, so the
          // char right after the first '.' must be a non-dot operator char.
          /\.[!%&*+/<=>@^|~?-][!%&*+./<=>@^|~?-]*/,
          "=",
          "!=",
          ":=",
          "::",
          "$",
          "?",
          "?<-",
          "?->",
        ),
      ),

    // Numbers
    int: (_) => token(/[+-]?([0-9]_?)+/),
    xint: (_) =>
      token(
        choice(/0[xX]([0-9a-fA-F]_?)+/, /0[oO]([0-7]_?)+/, /0[bB]([0-1]_?)+/),
      ),

    ieee32: ($) =>
      choice(
        seq($.float, token.immediate(/[fF]/)),
        seq($.xint, token.immediate("lf")),
      ),
    ieee64: ($) => seq($.xint, token.immediate("LF")),

    decimal: ($) => seq(choice($.float, $.int), token.immediate(/[Mm]/)),
